<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/settings_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            tools:ignore="ContentDescription">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/corners_cut_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cut_corner_card_shape"
                android:paddingBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/button_exit"
                    android:layout_width="22dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:clickable="true"
                    android:contentDescription="@string/close"
                    android:focusable="true"
                    android:src="@drawable/ic_exit_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <LinearLayout
                    android:id="@+id/layout_sound"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/icon_sound"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/sound"
                        android:src="@drawable/ic_sound"
                        app:tint="@color/on_primary" />

                    <TextView
                        android:id="@+id/tv_sound"
                        style="@style/Body.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/sound"
                        android:textColor="@color/on_primary"
                        android:textSize="16sp" />

                    <SeekBar
                        android:id="@+id/seekbar_sound"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:max="100"
                        android:progress="70"
                        android:progressDrawable="@drawable/seekbar_background"
                        android:splitTrack="false"
                        android:thumb="@drawable/ic_thumb"
                        android:thumbTint="@null" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_music"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_sound">

                    <ImageView
                        android:id="@+id/icon_music"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/music"
                        android:src="@drawable/ic_music"
                        app:tint="@color/on_primary" />

                    <TextView
                        android:id="@+id/tv_music"
                        style="@style/Body.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/Music"
                        android:textColor="@color/on_primary"
                        android:textSize="16sp" />

                    <SeekBar
                        android:id="@+id/seekbar_music"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:max="100"
                        android:progress="50"
                        android:progressDrawable="@drawable/seekbar_background"
                        android:splitTrack="false"
                        android:thumb="@drawable/ic_thumb"
                        android:thumbTint="@null" />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/background_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_music" />

                <LinearLayout
                    android:id="@+id/layout_action_buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_save"
                        style="@style/Primary_Button"
                        android:layout_width="0dp"
                        android:layout_height="46dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/save_changes"
                        android:textColor="#4A148C"
                        tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_discard"
                        style="@style/SecondaryButton"
                        android:layout_width="0dp"
                        android:layout_height="46dp"
                        android:layout_weight="1"
                        android:text="@string/discard"
                        tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_title"
                style="@style/Title.Small"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="276dp"
                android:background="@drawable/ic_hexagon"
                android:elevation="8dp"
                android:paddingStart="24dp"
                android:paddingTop="12dp"
                android:paddingEnd="24dp"
                android:paddingBottom="12dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="#1B5E20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>