<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/surface"
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        tools:context=".presentation.fragment.StartPlayFragment">

        <com.thechance.qurio.presentation.screen.results.custom.ResultCardView
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/primary_button_shape"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/results"
            app:layout_constraintStart_toStartOf="@+id/results"
            app:layout_constraintTop_toBottomOf="@+id/results"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.6">

            <TextView
                android:id="@+id/txt_share"
                style="@style/Label.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_with_friends"
                android:textAllCaps="false"
                android:textColor="@color/on_primary"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/ic_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/on_primary"
                android:contentDescription="@string/share_with_friends"
                android:src="@drawable/ic_share" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.thechance.qurio.presentation.screen.results.custom.PrimaryButton
                android:id="@+id/btnPlayAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_again" />

            <com.thechance.qurio.presentation.screen.results.custom.SecondaryButton
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/back_to_home" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>