<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/dialog_achievements"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription">

        <View
            android:id="@+id/achievement_card_background"
            style="@style/CutCornersCardStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/icon_hexagon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_hexagon"
            app:layout_constraintDimensionRatio="145:40"
            app:layout_constraintEnd_toEndOf="@id/achievement_card_background"
            app:layout_constraintStart_toStartOf="@id/achievement_card_background"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_exit"
            android:layout_width="22dp"
            android:layout_height="26dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:clickable="true"
            android:elevation="1dp"
            android:focusable="true"
            android:src="@drawable/ic_exit_btn"
            app:layout_constraintEnd_toEndOf="@id/achievement_card_background"
            app:layout_constraintTop_toTopOf="@id/achievement_card_background" />

        <TextView
            android:id="@+id/text_title"
            style="@style/Title.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:elevation="1dp"
            android:text="@string/achievements"
            android:textColor="@color/shade_primary"
            app:layout_constraintBottom_toBottomOf="@+id/icon_hexagon"
            app:layout_constraintEnd_toEndOf="@id/icon_hexagon"
            app:layout_constraintStart_toStartOf="@id/icon_hexagon"
            app:layout_constraintTop_toTopOf="@id/icon_hexagon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_achievements"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:elevation="2dp"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="@id/achievement_card_background"
            app:layout_constraintStart_toStartOf="@id/achievement_card_background"
            app:layout_constraintTop_toBottomOf="@id/icon_hexagon"
            tools:itemCount="11"
            tools:listitem="@layout/item_achievement" />

        <LinearLayout
            android:id="@+id/layout_actions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="@id/achievement_card_background"
            app:layout_constraintStart_toStartOf="@id/achievement_card_background"
            app:layout_constraintTop_toBottomOf="@id/recycler_achievements">

            <TextView
                style="@style/Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:text="@string/click_on_achievement_to_view_details"
                android:textColor="@color/shade_secondary" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_ok"
                style="@style/Secondary_Button"
                android:layout_width="match_parent"
                android:layout_marginBottom="36dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>